cmake_minimum_required(VERSION 3.4.1)

set( DIR_physx ../../../../../../../../PhysX/physx )
set( DIR_pxshared ../../../../../../../../PhysX/pxshared )
set( DIR_physx_physxmetadata ../../../../../../../../PhysX/physx/source/physxmetadata/core )
set( DIR_physx_physx ../../../../../../../../PhysX/physx/source/physx/ )

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11 -fno-rtti -fno-exceptions -ffunction-sections -fdata-sections")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/common/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/common/src")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physx/src")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physx/src/device")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physx/src/buffering")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physxgpu/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/contact")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/common")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/convex")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/distance")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/sweep")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/gjk")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/intersection")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/mesh")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/hf")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/pcm")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/geomutils/src/ccd")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/lowlevel/api/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/lowlevel/software/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/lowlevel/common/include/pipeline")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/lowlevelaabb/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/lowleveldynamics/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/simulationcontroller/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/simulationcontroller/src")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physxcooking/src")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physxcooking/src/mesh")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physxcooking/src/convex")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/scenequery/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/physxmetadata/core/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/immediatemode/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/pvd/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/../pxshared/include")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --include-directory=${DIR_physx}/source/foundation/include")


add_library(physx STATIC
			${DIR_physx_physxmetadata}/src/PxAutoGeneratedMetaDataObjects.cpp
			${DIR_physx_physxmetadata}/src/PxMetaDataObjects.cpp

			${DIR_physx_physx}/src/NpActor.cpp
			${DIR_physx_physx}/src/NpAggregate.cpp
			${DIR_physx_physx}/src/NpArticulation.cpp
			${DIR_physx_physx}/src/NpArticulationJoint.cpp
			${DIR_physx_physx}/src/NpArticulationJointReducedCoordinate.cpp
			${DIR_physx_physx}/src/NpArticulationLink.cpp
			${DIR_physx_physx}/src/NpArticulationReducedCoordinate.cpp
			${DIR_physx_physx}/src/NpBatchQuery.cpp
			${DIR_physx_physx}/src/NpConstraint.cpp
			${DIR_physx_physx}/src/NpFactory.cpp
			${DIR_physx_physx}/src/NpMaterial.cpp
			${DIR_physx_physx}/src/NpMetaData.cpp
			${DIR_physx_physx}/src/NpPhysics.cpp
			${DIR_physx_physx}/src/NpPvdSceneQueryCollector.cpp
			${DIR_physx_physx}/src/NpReadCheck.cpp
			${DIR_physx_physx}/src/NpRigidDynamic.cpp
			${DIR_physx_physx}/src/NpRigidStatic.cpp
			${DIR_physx_physx}/src/NpScene.cpp
			${DIR_physx_physx}/src/NpSceneQueries.cpp
			${DIR_physx_physx}/src/NpSerializerAdapter.cpp
			${DIR_physx_physx}/src/NpShape.cpp
			${DIR_physx_physx}/src/NpShapeManager.cpp
			${DIR_physx_physx}/src/NpWriteCheck.cpp
			${DIR_physx_physx}/src/PvdMetaDataPvdBinding.cpp
			${DIR_physx_physx}/src/PvdPhysicsClient.cpp

			${DIR_physx_physx}/src/buffering/ScbActor.cpp
			${DIR_physx_physx}/src/buffering/ScbAggregate.cpp
			${DIR_physx_physx}/src/buffering/ScbBase.cpp
			${DIR_physx_physx}/src/buffering/ScbMetaData.cpp
			${DIR_physx_physx}/src/buffering/ScbScene.cpp
			${DIR_physx_physx}/src/buffering/ScbScenePvdClient.cpp
			${DIR_physx_physx}/src/buffering/ScbShape.cpp

			${DIR_physx_physx}/src/gpu/PxGpu.cpp
			${DIR_physx_physx}/src/gpu/PxPhysXGpuModuleLoader.cpp
            )

target_link_libraries(physx
            android
            log
            m)
